JumpScript/tests/baselines/reference/symbolProperty49.errors.txt
tests/cases/conformance/es6/Symbols/symbolProperty49.jump(5,10): error TS2471: A computed property name of the form 'Symbol.iterator' must be of type 'symbol'.


==== tests/cases/conformance/es6/Symbols/symbolProperty49.jump (1 errors) ====
    module M {
        export var Symbol;
    
        class C {
            [Symbol.iterator]() { }
             ~~~~~~~~~~~~~~~
!!! error TS2471: A computed property name of the form 'Symbol.iterator' must be of type 'symbol'.
        }
    }